Fixed overflow image on empty slider and modified hover style

--- a/Static Mock-ups/Unify-v1.8/HTML/assets/css/custom.css
+++ b/Static Mock-ups/Unify-v1.8/HTML/assets/css/custom.css
@@ -7,7 +7,7 @@
 	display: block;
 	margin: 100px auto;
 	width: 100%;
-	max-width: 797px;
+	max-width: 697px;
 }
 
 
