--- a/src/main/resources/css/editSlider.css
+++ b/src/main/resources/css/editSlider.css
@@ -16,6 +16,7 @@
   font-family: Lato, sans-serif;
   background-size: cover;
   height: 550px;
+    overflow: hidden;
 }
 
 /* Tab/Slider controls */
@@ -108,7 +109,6 @@
   font-weight: 600;
   text-transform: uppercase;
   font-family: "Lato", Arial, sans-serif;
-  margin-top: -20px
 }
 
 .color-red {
@@ -194,8 +194,7 @@
 }
 
 .tab-content.empty:hover {
-  -webkit-box-shadow: 0 0 50px 4px rgba(0,0,0,0.4);
-  box-shadow: 0 0 50px 4px rgba(0,0,0,0.4);
-  border-radius: 10px;
+  -webkit-box-shadow: 0 0 50px 2px rgba(0,0,0,0.3);
+  box-shadow: 0 0 50px 2px rgba(0,0,0,0.3);
   cursor: pointer;
 }
